change to global

--- a/force-app/main/default/classes/UIJobTaskAbstract.cls
+++ b/force-app/main/default/classes/UIJobTaskAbstract.cls
@@ -3,55 +3,55 @@
  * @group             : 
  * @last modified on  : 25-09-2023
 **/
-public virtual class UIJobTaskAbstract implements UIJobTaskInterface {
-    public String paramOne='';
-    public String paramTwo='';
-    public String paramThree='';
-    public String lastString='';
-    public String taskType='';
-    public String errorMessage='';
+global virtual class UIJobTaskAbstract implements UIJobTaskInterface {
+    global String paramOne='';
+    global String paramTwo='';
+    global String paramThree='';
+    global String lastString='';
+    global String taskType='';
+    global String errorMessage='';
  /**
     * @description ResultWrapper
     * type Class Wrapper
     **/
-    Public class ResultWrapper{
+    global class ResultWrapper{
         /**
         * @description 
         * type isSuccess 
         **/
         @AuraEnabled
-        public Boolean isSuccess{get;set;}
+        global Boolean isSuccess{get;set;}
         /**
         * @description 
         * type message 
         **/
         @AuraEnabled
-        public String message{get;set;}
+        global String message{get;set;}
         /**
         * @description 
         * type jobId 
         **/
         @AuraEnabled
-        public Id jobId{get;set;}
+        global Id jobId{get;set;}
         /**
         * @description 
         * type outputJSON 
         **/
         @AuraEnabled
-        public String outputJSON{get;set;}
+        global String outputJSON{get;set;}
 
         /**
         * @description 
         * type outputJSON 
         **/
         @AuraEnabled
-        public boolean isEnd{get;set;}
+        global boolean isEnd{get;set;}
         /**
         * @description 
         * type outputJSON 
         **/
         @AuraEnabled
-        public String lastString{get;set;}
+        global String lastString{get;set;}
     }
     /**
     * @description run method 
@@ -59,21 +59,21 @@ public virtual class UIJobTaskAbstract implements UIJobTaskInterface {
     * @param inputJSON 
     * @return ResultWrapper   
     **/   
-    public protected virtual ResultWrapper run(String recordIdStr,String inputJSON){return null;}
-    public Map<String,Object> convertJsonToMap(String inputJSON)
+    global protected virtual ResultWrapper run(String recordIdStr,String inputJSON){return null;}
+    global Map<String,Object> convertJsonToMap(String inputJSON)
     {
         return ( ( Map<String,Object> ) JSON.deserializeUntyped(inputJSON));
     }
 
-    public ResultWrapper successResult()
+    global ResultWrapper successResult()
     {
         return successResult(null);
     }
-    public ResultWrapper successResult(String lastId)
+    global ResultWrapper successResult(String lastId)
     {
         return successResult(lastId,'');
     }
-    public ResultWrapper successResult(String lastId,String message)
+    global ResultWrapper successResult(String lastId,String message)
     {
         ResultWrapper result = new ResultWrapper();
         result.isSuccess = true;
@@ -89,12 +89,12 @@ public virtual class UIJobTaskAbstract implements UIJobTaskInterface {
     /** 
     * @description Exception Class for custom exception
     */  
-    public class MyException extends Exception {}
+    global class MyException extends Exception {}
     /** 
     * @description raise custom error based on message
     * @param message error message
     */    
-    public static void raiseError(String message)
+    global static void raiseError(String message)
     {
         throw new MyException(message);
     }  
